[project]
name = "preempt_example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "langroid>=0.52.5",
    "preempt>=0.1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = ["preempt_example"]
only-packages = true
exclude = [
    "**/__pycache__", "**/*.pyc", "**/node_modules/**", "tests/"
]
